# browser-gym-annotation

./: .env.example  .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: agent.py  agent_runs.py  auth.py  backfill.py  canonical.py  checkpoints.py  config.py  db.py  disposition.py  finalize.py  gym_client.py  gym_review.py  jobs.py  main.py  models.py  recorder.py  replay.py  seed.py  verify.py  versions.py
backend/app/api/: admin.py  auth.py  disposition.py  export.py  gym.py  live.py  qa.py  sessions.py  tasks.py  versions.py
backend/app/data/: breakers.json
backend/app/fixtures/: task_review.json
backend/app/snapshots/: calendar.html  mail.html  manifest.json  market.html  shop_cart.html  shop_home.html  shop_payments.html
backend/app/workspace/: __init__.py  manager.py  provider.py
backend/browser_gym_annotator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 16bd9e537d89_workspace_lease_purpose_human_vs_agent_.py  (+12 more)
backend/scripts/: backfill_trajectories.py  capture_snapshots.py
backend/tests/: conftest.py  test_agent.py  test_agent_runs.py  test_auth.py  test_backfill.py  test_canonical.py  test_checkpoints.py  test_disposition.py  test_durability.py  test_e2e_correction_loop.py  test_export.py  test_finalize.py  test_gym.py  test_live_api.py  test_manual_capture.py  test_qa.py  test_recorder.py  test_replay.py  test_rerun_cap.py  test_sessions.py  test_tasks.py  test_verify.py  test_versions.py  test_versions_api.py  test_workspace.py
(+84 files in other folders)
