[project]
name = "browser-gym-annotator-backend"
version = "0.0.1"
description = "Platform API for the browser-use gym annotator — session orchestration, verifiers-as-data, oracle gate."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
